# cuda-cpp-robotics-projects

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  catalog.json  cuda-cpp-robotics-projects.md
docs/: BUILD_GUIDE.md  COMMENTING_STANDARD.md  STATUS.md  SYSTEM_DESIGN.md
docs/PROJECT_TEMPLATE/: .gitignore  CMakeLists.txt  PRACTICE.md  README.md  THEORY.md
docs/PROJECT_TEMPLATE/data/: README.md
docs/PROJECT_TEMPLATE/demo/: README.md  expected_output.txt  run_demo.ps1  run_demo.sh
docs/PROJECT_TEMPLATE/scripts/: download_data.ps1  download_data.sh  make_synthetic.py
docs/PROJECT_TEMPLATE/src/: kernels.cu  kernels.cuh  main.cu  reference_cpu.cpp
projects/01-perception-cameras-vision/01.01-full-gpu-image-pipeline/: .gitignore  CMakeLists.txt  PRACTICE.md  README.md  THEORY.md
projects/01-perception-cameras-vision/01.02-stereo-depth/: .gitignore  CMakeLists.txt  PRACTICE.md  README.md  THEORY.md
projects/01-perception-cameras-vision/01.03-optical-flow/: .gitignore  CMakeLists.txt  PRACTICE.md  README.md  THEORY.md
projects/01-perception-cameras-vision/01.04-feature-pipeline/: .gitignore  CMakeLists.txt  PRACTICE.md  README.md  THEORY.md
projects/01-perception-cameras-vision/01.05-sift-surf-on-gpu/: .gitignore  CMakeLists.txt  PRACTICE.md  README.md  THEORY.md
projects/02-perception-lidar-point-clouds/02.03-ground-segmentation/: .gitignore  CMakeLists.txt  PRACTICE.md  README.md  THEORY.md
projects/02-perception-lidar-point-clouds/02.03-ground-segmentation/data/: README.md
projects/02-perception-lidar-point-clouds/02.03-ground-segmentation/data/sample/: README.md
projects/02-perception-lidar-point-clouds/02.03-ground-segmentation/demo/: README.md  expected_output.txt  run_demo.ps1  run_demo.sh
projects/02-perception-lidar-point-clouds/02.03-ground-segmentation/scripts/: download_data.ps1  download_data.sh  make_synthetic.py
projects/02-perception-lidar-point-clouds/02.03-ground-segmentation/src/: kernels.cu  kernels.cuh  main.cu  reference_cpu.cpp
projects/02-perception-lidar-point-clouds/02.03-ground-segmentation/src/util/: cuda_check.cuh  paths.h  timer.cuh
projects/02-perception-lidar-point-clouds/02.08-per-point-motion-deskew-with-pose-interpolation/: .gitignore  CMakeLists.txt  PRACTICE.md  README.md  THEORY.md
projects/02-perception-lidar-point-clouds/02.08-per-point-motion-deskew-with-pose-interpolation/data/: README.md
projects/02-perception-lidar-point-clouds/02.08-per-point-motion-deskew-with-pose-interpolation/demo/: README.md  expected_output.txt  run_demo.ps1  run_demo.sh
projects/02-perception-lidar-point-clouds/02.08-per-point-motion-deskew-with-pose-interpolation/scripts/: download_data.ps1  download_data.sh  make_synthetic.py
projects/02-perception-lidar-point-clouds/02.08-per-point-motion-deskew-with-pose-interpolation/src/: kernels.cu  kernels.cuh  main.cu  reference_cpu.cpp
projects/02-perception-lidar-point-clouds/02.08-per-point-motion-deskew-with-pose-interpolation/src/util/: README.md  cuda_check.cuh  paths.h  timer.cuh
projects/12-ml-ai/12.01-tensorrt-deployment-with-custom-cuda-pre-post/: .gitignore  CMakeLists.txt  PRACTICE.md  README.md  THEORY.md
projects/12-ml-ai/12.01-tensorrt-deployment-with-custom-cuda-pre-post/data/: README.md
projects/12-ml-ai/12.01-tensorrt-deployment-with-custom-cuda-pre-post/data/sample/: README.md  ground_truth.csv  test_scene.ppm
projects/12-ml-ai/12.01-tensorrt-deployment-with-custom-cuda-pre-post/demo/: README.md  expected_output.txt  run_demo.ps1  run_demo.sh
projects/12-ml-ai/12.01-tensorrt-deployment-with-custom-cuda-pre-post/scripts/: download_data.ps1  download_data.sh  make_synthetic.py
projects/12-ml-ai/12.01-tensorrt-deployment-with-custom-cuda-pre-post/src/: kernels.cu  kernels.cuh  main.cu  reference_cpu.cpp  tensorrt_path.cpp
projects/12-ml-ai/12.01-tensorrt-deployment-with-custom-cuda-pre-post/src/util/: cuda_check.cuh  timer.cuh
push-notes/: 2026-07-08-00-bootstrap.md  2026-07-08-01-flagship-33-01-small-matrix-linalg.md  2026-07-08-02-flagship-09-01-batched-fk.md  2026-07-08-03-flagship-07-09-jump-flooding.md  2026-07-08-04-flagship-08-01-mppi-foundations-complete.md  2026-07-09-00-flagship-04-01-particle-filter.md  2026-07-09-01-flagship-05-01-tsdf-fusion.md  2026-07-09-02-flagship-22-01-swarm-simulator.md  2026-07-09-03-flagship-31-01-hj-reachability-batch-1a-complete.md  2026-07-09-04-flagship-06-05-stomp.md  2026-07-09-05-flagship-15-01-minimum-snap.md  2026-07-09-06-flagship-17-01-lambert-porkchop.md  2026-07-09-07-flagship-23-01-costmaps-dwa-batch-1b-complete.md  2026-07-09-08-flagship-01-02-stereo-sgm.md  2026-07-09-09-flagship-02-06-gpu-icp.md  2026-07-09-10-flagship-03-01-fmcw-cfar.md  2026-07-10-00-flagship-10-03-parallel-sim-batch-1c-complete.md  2026-07-10-01-flagship-11-01-lidar-simulator.md  2026-07-10-02-flagship-12-01-tensorrt-deploy.md  2026-07-10-03-flagship-13-03-foothold-scoring.md  2026-07-10-04-flagship-14-02-traversability-batch-1d-complete.md  2026-07-10-05-flagship-16-01-thruster-allocation.md  2026-07-10-06-flagship-18-01-snake-serpenoid.md  2026-07-10-07-flagship-19-01-grasp-scoring.md  2026-07-10-08-flagship-20-01-gelsight-batch-1e-complete.md  2026-07-10-09-flagship-21-04-ssm.md  2026-07-10-10-flagship-24-01-magnetostatic-fea.md  2026-07-10-11-flagship-25-01-battery-pack.md  2026-07-10-12-flagship-26-01-topology-optimization-batch-1f-complete.md  2026-07-10-13-flagship-27-04-composite-layup.md  2026-07-10-14-flagship-28-01-soft-arm-fem.md  2026-07-10-15-flagship-29-05-ultrasound-beamforming.md  2026-07-10-16-flagship-30-01-agriculture-batch-1g-complete.md  2026-07-10-17-flagship-32-02-cuda-graphs.md  2026-07-10-18-flagship-34-03-ergodic-control.md  2026-07-10-19-flagship-35-01-microswarm.md  2026-07-10-20-flagship-36-03-lattice-robots-phase-1-flagships-complete.md  2026-07-10-21-standards-retrospective-phase-1.md  2026-07-10-22-phase-2-batch-2a-domain-01-stars.md  2026-07-11-00-phase-2-batch-2b-domain-01-intermediates.md  (+9 more)
tools/: catalog.py  new_pushnote.py  scaffold.py  status.py  verify_project.py
(+10041 files in other folders)
